Add new figures.

--- a/scripts/FeH Metallicity Profiles by Region.ipynb
+++ b/scripts/FeH Metallicity Profiles by Region.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from multiprocessing import Pool\n",
     "import os\n",
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "RXY_RANGE: tuple = (0, 30)\n",
-    "N_BINS: int = 30"
+    "N_BINS: int = 30\n",
+    "DISC_STD_CIRC: float = settings.disc_std_circ\n",
+    "DISC_MIN_CIRC: float = settings.disc_min_circ\n",
+    "COLD_DISC_DELTA_CIRC: float = settings.cold_disc_delta_circ\n",
+    "BULGE_MAX_SPECIFIC_ENERGY: float = -0.6\n",
+    "SUFFIX: str = \"_02\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +94,12 @@
     "        A data frame with the properties.\n",
     "    \"\"\"\n",
     "\n",
-    "    settings = Settings()\n",
-    "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=settings.disc_std_circ,\n",
-    "        disc_min_circ=settings.disc_min_circ,\n",
-    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
-    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
+    "        disc_std_circ=DISC_STD_CIRC,\n",
+    "        disc_min_circ=DISC_MIN_CIRC,\n",
+    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
+    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
     "    s.add_metal_abundance(of, to)\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
@@ -103,11 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_data(simulation: int):\n",
+    "    settings = Settings()\n",
     "    df = read_data(simulation=simulation, of=\"Fe\", to='H')\n",
     "    mean_by_region = []\n",
     "    for tag in settings.component_tags.values():\n",
@@ -125,11 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_data_for_sample(simulations: list):\n",
+    "    settings = Settings()\n",
     "    data = Pool().map(process_data, simulations)\n",
     "    df = pd.DataFrame()\n",
     "    df[\"BinCenters_kpc\"] = data[0][0]\n",
@@ -150,15 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:9: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  if __name__ == '__main__':\n"
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:10: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
      ]
     }
    ],
@@ -169,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +221,8 @@
     "\n",
     "axs[0, 0].legend(loc=\"lower left\", framealpha=0.0, fontsize=4.0)\n",
     "\n",
-    "fig.savefig(\"../images/FeH_metallicity_profiles_by_region/originals.pdf\")\n",
+    "fig.savefig(\n",
+    "    f\"../images/FeH_metallicity_profiles_by_region/originals{SUFFIX}.pdf\")\n",
     "plt.close(fig)"
    ]
   },
@@ -219,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +278,8 @@
     "                  transform=axs[idx].transAxes)\n",
     "\n",
     "fig.savefig(\n",
-    "    \"../images/FeH_metallicity_profiles_by_region/originals_average.pdf\")\n",
+    "    f\"../images/FeH_metallicity_profiles_by_region/\"\n",
+    "    f\"originals_average{SUFFIX}.pdf\")\n",
     "plt.close(fig)"
    ]
   }
