Output new figures.

--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,135 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MIN_PART_COUNT = 100"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Rotation Velocity"
+    "MIN_PART_COUNT = 100\n",
+    "RXY_RANGE = (0, 30)\n",
+    "N_BINS = 30\n",
+    "\n",
+    "DISC_STD_CIRC = settings.disc_std_circ\n",
+    "DISC_MIN_CIRC = settings.disc_min_circ\n",
+    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
+    "SUFFIX = \"_02\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def read_data_rot_vel(simulation: str) -> tuple:\n",
-    "#     \"\"\"\n",
-    "#     This method returns the radius in the disc plane and the tangential\n",
-    "#     velocity of the stars in the main object.\n",
-    "\n",
-    "#     Parameters\n",
-    "#     ----------\n",
-    "#     simulation : str\n",
-    "#         The simulation to consider.\n",
-    "\n",
-    "#     Returns\n",
-    "#     -------\n",
-    "#     tuple\n",
-    "#         The properties.\n",
-    "#     \"\"\"\n",
-    "#     s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 4])\n",
-    "#     s.add_extra_coordinates()\n",
-    "\n",
-    "#     is_type = (s.type == 0) | (s.type == 1) \\\n",
-    "#         | ((s.type == 4) & (s.stellar_formation_time > 0))\n",
-    "#     is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
-    "\n",
-    "#     rotation_velocities = s.v_phi[is_type & is_main_obj]\n",
-    "#     cylindrical_radius = s.rho[is_type & is_main_obj]\n",
-    "#     particle_types = s.type[is_type & is_main_obj]\n",
-    "\n",
-    "#     return rotation_velocities, cylindrical_radius, particle_types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig = plt.figure(figsize=(7.2, 7.2))\n",
-    "# gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
-    "# axs = gs.subplots(sharex=True, sharey=True)\n",
-    "\n",
-    "# for ax in axs.flatten():\n",
-    "#     ax.set_xlim(0, 25)\n",
-    "#     ax.set_ylim(0, 300)\n",
-    "#     ax.set_xticks([0, 10, 20])\n",
-    "#     ax.set_yticks([0, 100, 200])\n",
-    "#     ax.set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
-    "#     ax.set_ylabel(r\"$v_\\phi$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}$]\")\n",
-    "#     ax.label_outer()\n",
-    "\n",
-    "# for i, galaxy in enumerate(settings.galaxies):\n",
-    "#     ax = axs.flatten()[i]\n",
-    "#     simulation = f\"au{galaxy}_or_l4_s127\"\n",
-    "#     v_phi, rho, ptype = read_data_rot_vel(simulation=simulation)\n",
-    "#     bin_edges = np.linspace(0, 25, 2 * (25 + 1))\n",
-    "\n",
-    "#     mean, _, _, _, bin_centers = get_binned_statistic(\n",
-    "#         x=rho,\n",
-    "#         values=v_phi,\n",
-    "#         bin_edges=bin_edges,\n",
-    "#         xrange=(0, 25),\n",
-    "#     )\n",
-    "#     ax.plot(bin_centers, mean, color='k', ls=\"solid\", label=\"Total\")\n",
-    "\n",
-    "#     mean, _, _, _, bin_centers = get_binned_statistic(\n",
-    "#         x=rho[ptype == 0],\n",
-    "#         values=v_phi[ptype == 0],\n",
-    "#         bin_edges=bin_edges,\n",
-    "#         xrange=(0, 25),\n",
-    "#     )\n",
-    "#     ax.plot(bin_centers, mean, color=\"tab:blue\", ls=\"dashed\", label=\"Gas\")\n",
-    "\n",
-    "#     mean, _, _, _, bin_centers = get_binned_statistic(\n",
-    "#         x=rho[ptype == 1],\n",
-    "#         values=v_phi[ptype == 1],\n",
-    "#         bin_edges=bin_edges,\n",
-    "#         xrange=(0, 25),\n",
-    "#     )\n",
-    "#     ax.plot(bin_centers, mean, color=\"tab:red\", ls=\"dashdot\",\n",
-    "#             label=\"Dark Matter\")\n",
-    "\n",
-    "#     mean, _, _, _, bin_centers = get_binned_statistic(\n",
-    "#         x=rho[ptype == 4],\n",
-    "#         values=v_phi[ptype == 4],\n",
-    "#         bin_edges=bin_edges,\n",
-    "#         xrange=(0, 25),\n",
-    "#     )\n",
-    "#     ax.plot(bin_centers, mean, color=\"tab:green\", ls=\"dotted\", label=\"Stars\")\n",
-    "\n",
-    "#     ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
-    "#             size=6.0, transform=ax.transAxes, ha=\"left\", va=\"top\")\n",
-    "    \n",
-    "#     if galaxy == 30: ax.legend(loc=\"center right\", framealpha=0, fontsize=4.0)\n",
-    "\n",
-    "#     fig.savefig(f\"../images/stellar_velocities/rotation_velocities.pdf\")\n",
-    "\n",
-    "# plt.close(fig)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Velocities by Region"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,16 +85,15 @@
     "    \"\"\"\n",
     "    settings = Settings()\n",
     "\n",
-    "    s = Snapshot(simulation=simulation,\n",
-    "                 loadonlytype=[0, 1, 2, 3, 4, 5])\n",
+    "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_circularity()\n",
     "    s.add_reference_to_potential()\n",
     "    s.add_normalized_potential()\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=settings.disc_std_circ,\n",
-    "        disc_min_circ=settings.disc_min_circ,\n",
-    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
-    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
+    "        disc_std_circ=DISC_STD_CIRC,\n",
+    "        disc_min_circ=DISC_MIN_CIRC,\n",
+    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
+    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
@@ -222,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,20 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create DataFrame with data for all galaxies\n",
-    "settings = Settings()\n",
-    "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
+    "# originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
+    "originals = [\"au6_or_l4_s127\"]\n",
     "data = create_binned_dataframe(\n",
-    "    simulations=originals, rxy_range=(0, 30), n_bins=30)"
+    "    simulations=originals, rxy_range=RXY_RANGE, n_bins=N_BINS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +242,8 @@
     "    axs[3].text(x=0.95, y=0.95, s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
     "                size=8.0, ha=\"right\", va=\"top\", transform=axs[3].transAxes)\n",
     "\n",
-    "    fig.savefig(f\"../images/stellar_velocities_by_region/{simulation}.pdf\")\n",
+    "    fig.savefig(\n",
+    "        f\"../images/stellar_velocities_by_region/{simulation}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
@@ -367,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,17 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:53: RuntimeWarning: Mean of empty slice\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(7.4, 8.0))\n",
     "gs = fig.add_gridspec(nrows=4, ncols=4, hspace=0.0, wspace=0.0)\n",
@@ -450,7 +331,8 @@
     "\n",
     "axs[1, 0].legend(loc=\"upper left\", framealpha=0, fontsize=6.0)\n",
     "\n",
-    "fig.savefig(f\"../images/stellar_velocities_by_region/originals_average.pdf\")\n",
+    "fig.savefig(\n",
+    "    f\"../images/stellar_velocities_by_region/originals_average{SUFFIX}.pdf\")\n",
     "plt.close(fig)"
    ]
   }
