Add new figure.

--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,32 +21,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
-    "from auriga.settings import Settings"
+    "from auriga.settings import Settings\n",
+    "from auriga.parser import parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure_setup()"
+    "figure_setup()\n",
+    "settings = Settings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISC_STD_CIRC = settings.disc_std_circ\n",
+    "DISC_MIN_CIRC = settings.disc_min_circ\n",
+    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
+    "SUFFIX = \"_02\""
    ]
   },
   {
@@ -59,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +85,7 @@
     "    \"\"\"\n",
     "    settings = Settings()\n",
     "\n",
-    "    s = Snapshot(simulation=simulation,\n",
-    "                 loadonlytype=[0, 1, 2, 3, 4, 5])\n",
+    "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_circularity()\n",
     "    s.add_reference_to_potential()\n",
     "    s.add_normalized_potential()\n",
@@ -95,22 +99,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_panel_for_galaxy(simulation: str, ax: plt.Axes):\n",
-    "    \"\"\"\n",
-    "    This method adds a panel with the results for a given simulation.\n",
+    "fig = plt.figure(figsize=(7, 8))\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    simulation : str\n",
-    "        The simulation.\n",
-    "    ax : plt.Axes\n",
-    "        The ax to which to add the plot.\n",
-    "    \"\"\"\n",
+    "for ax in axs.flatten():\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "    ax.set_xlim(-1.4, 1.4)\n",
+    "    ax.set_xticks([-1, 0, 1])\n",
+    "    ax.set_ylim(-1, 0)\n",
+    "    ax.set_yticks([-.8, -.6, -.4, -.2, 0])\n",
+    "    ax.set_axisbelow(True)\n",
+    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "        ax.set_xlabel(r'$\\epsilon = j_z \\, j_\\mathrm{circ}^{-1}$')\n",
+    "        ax.tick_params(labelbottom=True)\n",
+    "    if ax.get_subplotspec().is_first_col():\n",
+    "        ax.set_ylabel(r'$\\tilde{e} = e \\, \\left| e \\right|_\\mathrm{max}^{-1}$')\n",
     "\n",
+    "for i in range(len(settings.groups[\"Included\"])):\n",
+    "    ax = axs.flatten()[i]\n",
+    "    galaxy = settings.groups[\"Included\"][i]\n",
+    "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "    label = f\"Au{galaxy}\"\n",
     "    circularity, potential = read_data(simulation=simulation)\n",
     "    _, _, _, im = ax.hist2d(circularity,\n",
     "                            potential,\n",
@@ -119,73 +134,30 @@
     "                            range=[ax.get_xlim(), ax.get_ylim()],\n",
     "                            norm=mcolors.LogNorm(vmin=1E0, vmax=1E3),\n",
     "                            rasterized=True)\n",
-    "    ax.text(x=0.05,\n",
-    "            y=0.95,\n",
-    "            s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "    ax.text(x=0.05, y=0.95,\n",
+    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
     "            size=6.0, transform=ax.transAxes,\n",
     "            ha='left', va='top',\n",
-    "            )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_decomp_phases_for_sample(simulations: list,\n",
-    "                                  filename: str):\n",
-    "    \"\"\"\n",
-    "    This method creates a plot of the phase space for galactic decomposition\n",
-    "    - the circularity in the x-axis and the normalized gravitational\n",
-    "    potential in the y-axis.\n",
+    "            )\n",
     "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    simulations : str\n",
-    "        A list of simulations to plot.\n",
-    "    filename : str\n",
-    "        The name of the output file.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    n_simulations = len(simulations)\n",
-    "\n",
-    "    fig = plt.figure(figsize=(7.2, 7.2))\n",
-    "    gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
-    "    axs = gs.subplots(sharex=True, sharey=True)\n",
-    "\n",
-    "    set_axs_configuration(\n",
-    "        xlim=(-1.4, 1.4), ylim=(-1, 0),\n",
-    "        xticks=[-1, 0, 1], yticks=[-.8, -.6, -.4, -.2, 0],\n",
-    "        xlabel=r'$\\epsilon = j_z \\, j_\\mathrm{circ}^{-1}$',\n",
-    "        ylabel=r'$\\tilde{e} = e \\, \\left| e \\right|_\\mathrm{max}^{-1}$',\n",
-    "        axs=axs, n_used=n_simulations)\n",
-    "\n",
-    "    for idx, ax in enumerate(axs.flat):\n",
-    "        if idx < n_simulations:\n",
-    "            add_panel_for_galaxy(simulations[idx], ax=ax)\n",
-    "        else:\n",
-    "            ax.axis(\"off\")\n",
+    "    # Draw lines for the components\n",
+    "    ax.plot([DISC_MIN_CIRC] * 2,\n",
+    "            ax.get_ylim(),\n",
+    "            ls=\"--\", c='k')\n",
+    "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2,\n",
+    "            ax.get_ylim(),\n",
+    "            ls=\"--\", c='k')\n",
+    "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2,\n",
+    "            ax.get_ylim(),\n",
+    "            ls=\"--\", c='k')\n",
+    "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],\n",
+    "            [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
+    "            ls=\"--\", c='k')\n",
     "\n",
     "    fig.savefig(\n",
-    "        f\"../images/galaxy_decomposition/phase_space_{filename}.pdf\")\n",
-    "    plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create plots for all galaxies in two figures\n",
-    "settings = Settings()\n",
-    "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
-    "reruns = [f\"au{i}_re_l4_s251\" for i in settings.reruns]\n",
-    "plot_decomp_phases_for_sample(\n",
-    "    simulations=originals, filename=\"originals_s127\")\n",
-    "plot_decomp_phases_for_sample(\n",
-    "    simulations=reruns, filename=\"reruns_s251\")"
+    "        f\"../images/galaxy_decomposition/phase_space_included{SUFFIX}.pdf\")\n",
+    "\n",
+    "plt.close(fig)"
    ]
   }
  ],
