--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,13 +64,25 @@
     "N_BINS_MAP = 200\n",
     "MAP_VMIN, MAP_VMAX = 1E0, 1E3\n",
     "AGE_RANGE = (0, 14)\n",
-    "ORIGINALS = [f\"au{galaxy}_or_l4_s127\" for galaxy in settings.galaxies]\n",
-    "RERUNS = [f\"au{galaxy}_or_l4_s127\" for galaxy in settings.reruns]"
+    "SAMPLE = settings.groups[\"Included\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISC_STD_CIRC = settings.disc_std_circ\n",
+    "DISC_MIN_CIRC = settings.disc_min_circ\n",
+    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
+    "SUFFIX = \"_02\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +103,7 @@
     "    pd.DataFrame\n",
     "        The properties in a Pandas DataFrame.\n",
     "    \"\"\"\n",
-    "    s = Snapshot(simulation=simulation,\n",
-    "                 loadonlytype=[0, 1, 2, 3, 4, 5])\n",
+    "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_stellar_age()\n",
     "    s.add_metal_abundance(of=\"Fe\", to='H')\n",
     "    s.add_circularity()\n",
@@ -109,10 +120,10 @@
     "\n",
     "    if include_region:\n",
     "        s.tag_particles_by_region(\n",
-    "            disc_std_circ=settings.disc_std_circ,\n",
-    "            disc_min_circ=settings.disc_min_circ,\n",
-    "            cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
-    "            bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
+    "            disc_std_circ=DISC_STD_CIRC,\n",
+    "            disc_min_circ=DISC_MIN_CIRC,\n",
+    "            cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
+    "            bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
     "        props[\"ComponentTag\"] = s.region_tag[is_real_star & is_main_obj]\n",
     "        props[\"Circularity\"] = s.circularity[is_real_star & is_main_obj]\n",
     "\n",
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,11 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = get_stats_of_sample(simulations=ORIGINALS)"
+    "stats = get_stats_of_sample(simulations=[f\"au{i}_or_l4_s127\" for i in SAMPLE])"
    ]
   },
   {
@@ -211,48 +222,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAMPLE = ORIGINALS\n",
-    "FIGURE_NAME = \"originals\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(7.2, 7.2))\n",
-    "gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
+    "fig = plt.figure(figsize=(7, 8))\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
     "axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
     "for ax in axs.flatten():\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
     "    ax.set_xlim(AGE_RANGE)\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
-    "    ax.set_xlabel(\"Age [Gyr]\")\n",
-    "\n",
     "    ax.set_ylim(-4, 3)\n",
     "    ax.set_yticks([-3, -2, -1, 0, 1, 2])\n",
-    "    ax.set_ylabel(\"[Fe/H]\")\n",
+    "    ax.set_axisbelow(True)\n",
+    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "        ax.set_xlabel(\"Age [Gyr]\")\n",
+    "        ax.tick_params(labelbottom=True)\n",
+    "    if ax.get_subplotspec().is_first_col():\n",
+    "        ax.set_ylabel(\"[Fe/H]\")\n",
     "\n",
-    "    ax.tick_params(which=\"both\", direction=\"in\")\n",
-    "    ax.label_outer()\n",
-    "    \n",
-    "for i, simulation in enumerate(SAMPLE):\n",
+    "for i in range(len(settings.groups[\"Included\"])):\n",
     "    ax = axs.flatten()[i]\n",
+    "    galaxy = settings.groups[\"Included\"][i]\n",
+    "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "    label = f\"Au{galaxy}\"\n",
     "    df = read_data(simulation=simulation)\n",
-    "\n",
-    "    # Plot the map for this galaxy\n",
-    "    im = ax.hist2d(df[\"StellarAge_Gyr\"],\n",
-    "                   df[\"[Fe/H]\"],\n",
-    "                   cmap='nipy_spectral',\n",
-    "                   bins=N_BINS_MAP,\n",
-    "                   range=[ax.get_xlim(), ax.get_ylim()],\n",
-    "                   norm=mcolors.LogNorm(vmin=MAP_VMIN, vmax=MAP_VMAX),\n",
-    "                   rasterized=True)\n",
+    "    ax.hist2d(df[\"StellarAge_Gyr\"],\n",
+    "              df[\"[Fe/H]\"],\n",
+    "              cmap='nipy_spectral',\n",
+    "              bins=N_BINS_MAP,\n",
+    "              range=[ax.get_xlim(), ax.get_ylim()],\n",
+    "              norm=mcolors.LogNorm(vmin=MAP_VMIN, vmax=MAP_VMAX),\n",
+    "              rasterized=True)\n",
     "\n",
     "    # Plot the median for this galaxy\n",
     "    stat, bin_edges, _ = binned_statistic(\n",
@@ -264,7 +268,7 @@
     "    bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "    ax.plot(bin_centers, stat)\n",
     "\n",
-    "    ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "    ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
     "            size=6.0, transform=ax.transAxes, ha='left', va='top')\n",
     "\n",
     "    # Plot the median for the sample and show the MSE\n",
@@ -274,7 +278,7 @@
     "            s=r\"$\\mathrm{MSE} = \" + str(np.round(mse, 3)).ljust(5, '0') + \"$\",\n",
     "            size=6.0, transform=ax.transAxes, ha='left', va='bottom')\n",
     "\n",
-    "    fig.savefig(f\"../images/age_metallicity/{FIGURE_NAME}.pdf\")\n",
+    "    fig.savefig(\"../images/age_metallicity/included.pdf\")\n",
     "\n",
     "plt.close(fig)"
    ]
@@ -289,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,15 +480,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "100%|██████████| 30/30 [54:12<00:00, 126.31s/it]\n"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -492,17 +494,13 @@
     "median_abundances = []\n",
     "median_ages = []\n",
     "\n",
-    "for simulation in tqdm(ORIGINALS):\n",
+    "for simulation in tqdm([f\"au{i}_or_l4_s127\" for i in SAMPLE]):\n",
     "    df = read_data(simulation=simulation, include_region=True)\n",
     "    for i in range(len(settings.components)):\n",
     "        is_region = (df[\"ComponentTag\"] == i)\n",
     "        components.append(i)\n",
-    "        median_abundances.append(\n",
-    "            np.nanmedian(\n",
-    "                df[\"[Fe/H]\"][is_region]))\n",
-    "        median_ages.append(\n",
-    "            np.nanmedian(\n",
-    "                df[\"StellarAge_Gyr\"][is_region]))\n",
+    "        median_abundances.append(np.nanmedian(df[\"[Fe/H]\"][is_region]))\n",
+    "        median_ages.append(np.nanmedian(df[\"StellarAge_Gyr\"][is_region]))\n",
     "\n",
     "components = np.array(components)\n",
     "median_abundances = np.array(median_abundances)\n",
@@ -511,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,78 +563,9 @@
     "\n",
     "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=7.5)\n",
     "\n",
-    "fig.savefig(\"../images/age_metallicity_by_region/median_scatter.pdf\")\n",
+    "fig.savefig(\n",
+    "    f\"../images/age_metallicity_by_region/included_scatter{SUFFIX}.pdf\")\n",
     "plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### MSE Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = pd.DataFrame()\n",
-    "# df[\"Galaxy\"] = [f\"Au{i}\" for i in range(1, 31)]\n",
-    "# df[\"MSE\"] = [0.033, 0.006, 0.019, 0.057, 0.004, 0.002, 0.061, 0.007, 0.012, 0.003, 0.043, 0.016, 0.009, 0.003, 0.099, 0.013, 0.039, 0.017, 0.032, 0.020, 0.009, 0.035, 0.010, 0.013, 0.006, 0.024, 0.007, 0.008, 0.034, 0.040]\n",
-    "# df[\"MSE_H\"] = [0.035, 0.065, 0.062, 0.021, 0.033, 0.042, 0.038, 0.048, 0.073, 0.023, 0.017, 0.013, 0.013, 0.010, 0.081, 0.035, 0.068, 0.071, 0.029, 0.027, 0.016, 0.039, 0.073, 0.104, 0.062, 0.044, 0.056, 0.041, 0.062, 0.031]\n",
-    "# df[\"MSE_B\"] = [0.019, 0.044, 0.020, 0.065, 0.016, 0.060, 0.054, 0.027, 0.004, 0.002, 0.048, 0.041, 0.002, 0.012, 0.167, 0.066, 0.028, 0.030, 0.057, 0.017, 0.026, 0.051, 0.014, 0.032, 0.024, 0.018, 0.032, 0.004, 0.025, 0.033]\n",
-    "# df[\"MSE_CD\"] = [0.051, 0.006, 0.011, 0.039, 0.010, 0.002, 0.064, 0.011, 0.009, 0.002, 0.045, 0.017, 0.002, 0.007, 0.085, 0.005, 0.016, 0.017, 0.042, 0.026, 0.006, 0.015, 0.004, 0.008, 0.007, 0.012, 0.004, 0.004, 0.040, 0.015]\n",
-    "# df[\"MSE_WD\"] = [0.053, 0.026, 0.032, 0.048, 0.014, 0.037, 0.076, 0.034, 0.017, 0.003, 0.047, 0.014, 0.004, 0.010, 0.106, 0.018, 0.024, 0.031, 0.053, 0.036, 0.010, 0.027, 0.041, 0.028, 0.022, 0.017, 0.029, 0.008, 0.026, 0.029]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# colors = np.array([\"tab:blue\"] * 30)\n",
-    "# colors[np.array(settings.groups[\"NotMilkyWayLike\"]) - 1] = \"tab:red\"\n",
-    "# colors[np.array(settings.groups[\"Excluded\"]) - 1] = \"tab:gray\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig, axs = plt.subplots(figsize=(7.4, 2.0), ncols=4, \n",
-    "#                         gridspec_kw={\"wspace\": 0.0})\n",
-    "\n",
-    "# for ax in axs.flatten():\n",
-    "#     ax.set_xlim(0, 0.12)\n",
-    "#     ax.set_ylim(0, 0.12)\n",
-    "#     ax.set_xticks([0.02, 0.04, 0.06, 0.08, 0.10])\n",
-    "#     ax.set_xlabel(r\"$\\mathrm{MSE}$\")\n",
-    "#     ax.grid(True, ls='-', lw=0.25, c='silver')\n",
-    "#     ax.set_ylabel(r\"$\\mathrm{MSE}_\\mathrm{Component}$\")\n",
-    "#     ax.label_outer()\n",
-    "\n",
-    "# axs[0].scatter(df[\"MSE\"], df[f\"MSE_H\"], zorder=10, c=colors, ls='-',\n",
-    "#                s=20, linewidths=0.5, edgecolors=\"white\")\n",
-    "# axs[1].scatter(df[\"MSE\"], df[f\"MSE_B\"], zorder=10, c=colors, ls='-',\n",
-    "#                s=20, linewidths=0.5, edgecolors=\"white\")\n",
-    "# axs[2].scatter(df[\"MSE\"], df[f\"MSE_CD\"], zorder=10, c=colors, ls='-',\n",
-    "#                s=20, linewidths=0.5, edgecolors=\"white\")\n",
-    "# axs[3].scatter(df[\"MSE\"], df[f\"MSE_WD\"], zorder=10, c=colors, ls='-',\n",
-    "#                s=20, linewidths=0.5, edgecolors=\"white\")\n",
-    "\n",
-    "# for i, comp in enumerate(settings.components):\n",
-    "#     axs[i].text(x=0.5, y=0.95,\n",
-    "#                 s=settings.component_labels[comp],\n",
-    "#                 size=8.0, transform=axs[i].transAxes,\n",
-    "#                 ha='center', va='top')\n",
-    "\n",
-    "# fig.savefig(f\"../images/age_metallicity_by_region/mse_analysis.pdf\")\n",
-    "# plt.close(fig)"
    ]
   }
  ],
